--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                         <a href="dz 2/index.html">Урок 20</a>
                     </li>
                     <li class="content__list-item">
-                        <a href="dz 2/index.html">Урок 43</a>
+                        <a href="intro 43/index.html">Урок 43</a>
                     </li>
                 </ul>
             </div>
