--- a/intro-51 dz method BAM/index.html
+++ b/intro-51 dz method BAM/index.html
@@ -13,7 +13,7 @@
         <div class="container">
             <div class="header__inner">
                 <!-- Логотип -->
-                <a class="logotip" href="#">
+                <a class="header__logo" href="#">
                     <img src="" alt="">
                 </a>
                 <!-- Навигация по сайту -->
@@ -53,12 +53,12 @@
     <section class="welcome">
         <div class="container">
             <h1 class="welcome__title"></h1>
-            <div class="welcome__inf">
+            <div class="welcome__info">
                 <p>
                     <span></span>
                 </p>
             </div>
-            <button class="welcome__title-buttom welcome__title-buttom--active"></button>
+            <button class="welcome__button welcome__button--active"></button>
         </div>
     </section>
     <section class="down">
@@ -84,7 +84,7 @@
                                 </span>
                                 <span class="products__price-symbol"></span>
                             </a>
-                            <a href="#" class="product__button-buy">Купить</a>
+                            <a href="#" class="products__buy-button">Купить</a>
                         </li>
                         <li class="products__type">
                             <a href="" class="products__logo">
@@ -95,12 +95,12 @@
                                     <img src="" alt="">
                                 </span>
                                 <h2></h2>
-                                <span class="product__price">
+                                <span class="products__price">
                                     1000
                                 </span>
-                                <span class="product__price-symbol"></span>
+                                <span class="products__price-symbol"></span>
                             </a>
-                            <a href="#" class="product__button-buy">Купить</a>
+                            <a href="#" class="products__buy-button">Купить</a>
                         </li>
                     </ul>
                 </div>
@@ -112,18 +112,18 @@
                         </div>
                     </div>
                     <div class="down__button-wrapper">
-                        <a href="#" class="down__promo-buttom">Каталог</a>
+                        <a href="#" class="down__promo-button">Каталог</a>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <section class="down__description-buttoms">
+    <section class="down-description">
         <div class="container">
             <div class="down-description__inner">
-                <div class="down-description__row-buttoms">
-                    <div class="down-description__buttom-delivery">
-                        <div class="down-description__image-delivery">
+                <div class="down-description__row">
+                    <div class="down-description__delivery">
+                        <div class="down-description__delivery-image">
                             <span></span>
                         </div>
                         <h4>
@@ -132,9 +132,9 @@
                         <div>Бесплатная доставка для всех заказов</div>
                     </div>
                 </div>
-                <div class="down-description__row-buttoms">
-                    <div class="down-description__buttom-delivery">
-                        <div class="down-description__image-delivery">
+                <div class="down-description__row">
+                    <div class="down-description__delivery">
+                        <div class="down-description__delivery-image">
                             <span></span>
                         </div>
                         <h4>
@@ -143,9 +143,9 @@
                         <div>Бесплатная доставка для всех заказов</div>
                     </div>
                 </div>
-                <div class="down-description__row-buttoms">
-                    <div class="down-description__buttom-delivery">
-                        <div class="down-description__image-delivery">
+                <div class="down-description__row">
+                    <div class="down-description__delivery">
+                        <div class="down-description__delivery-image">
                             <span></span>
                         </div>
                         <h4>
@@ -154,9 +154,9 @@
                         <div>Бесплатная доставка для всех заказов</div>
                     </div>
                 </div>
-                <div class="down-description__row-buttoms">
-                    <div class="down-description__buttom-delivery">
-                        <div class="down-description__image-delivery">
+                <div class="down-description__row">
+                    <div class="down-description__delivery">
+                        <div class="down-description__delivery-image">
                             <span></span>
                         </div>
                         <h4>
@@ -168,5 +168,6 @@
             </div>
         </div>
     </section>
+</body>
 
 </html>
