--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                         <a href="intro-51 dz method BAM/index.html">Урок 51</a>
                     </li>
                     <li class="content__list-item">
-                        <a href="intro-69-73 dz /index.html">Урок 69</a>
+                        <a href="intro-69-73 dz">Урок 69</a>
                     </li>
                 </ul>
             </div>
