--- a/index.html
+++ b/index.html
@@ -92,6 +92,9 @@
             <div class="content__block" id="tasksBlock">
                 <div class="content__title">Домашние задания</div>
                 <ul class="content__list">
+                     <li class="content__list-item">
+                        <a href="intro-8 dz/index.html">Урок 8</a>
+                    </li>
                     <li class="content__list-item">
                         <a href="dz1/index.html">Урок 13</a>
                     </li>
