--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                         <a href="intro-8 dz/index.html">Урок 8</a>
                     </li>
                     <li class="content__list-item">
-                        <a href="dz1/index.html">Урок 13</a>
+                        <a href="intro 13 dz/index.html">Урок 13</a>
                     </li>
                     <li class="content__list-item">
                         <a href="dz3/index.html">Урок 43</a>
