--- a/index.html
+++ b/index.html
@@ -99,11 +99,15 @@
                         <a href="intro 13 dz/index.html">Урок 13</a>
                     </li>
                     <li class="content__list-item">
-                        <a href="dz3/index.html">Урок 43</a>
-                    </li>
-                    <li class="content__list-item">
                         <a href="dz 2 intro 20/index.html">Урок 20</a>
                     </li>
+                    <li class="content__list-item">
+                        <a href="intro 28 dz/index.html">Урок 28</a>
+                    </li>
+                    <li class="content__list-item">
+                        <a href="dz3/index.html">Урок 43</a>
+                    </li>
+                    
                     <li class="content__list-item">
                         <a href="intro-36 dz3/index.html">Урок 36</a>
                     </li>
