--- a/index.html
+++ b/index.html
@@ -105,12 +105,15 @@
                         <a href="intro 28 dz/index.html">Урок 28</a>
                     </li>
                     <li class="content__list-item">
-                        <a href="dz3/index.html">Урок 43</a>
-                    </li>
-                    
-                    <li class="content__list-item">
                         <a href="intro-36 dz3/index.html">Урок 36</a>
                     </li>
+                    <li class="content__list-item">
+                        <a href="dz3/index.html">Урок 43</a>
+                    </li>
+                    <li class="content__list-item">
+                        <a href="intro 47 dz/index.html">Урок 47</a>
+                    </li>
+                    
                     <li class="content__list-item">
                         <a href="intro-51 dz method BAM/index.html">Урок 51</a>
                     </li>
