--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                         <a href="dz3/index.html">Урок 43</a>
                     </li>
                     <li class="content__list-item">
-                        <a href="intro 47 dz/index.html">Урок 47</a>
+                        <a href="intro 47 dz">Урок 47</a>
                     </li>
                     
                     <li class="content__list-item">
