--- a/index.html
+++ b/index.html
@@ -113,9 +113,26 @@
                     <li class="content__list-item">
                         <a href="intro 47 dz">Урок 47</a>
                     </li>
-                    
+                    <li class="content__list-item">
+                        <a href="intro 48 dz/index.html">Урок 48</a>
+                    </li>
                     <li class="content__list-item">
                         <a href="intro-51 dz method BAM/index.html">Урок 51</a>
+                    </li>
+                    <li class="content__list-item">
+                        <a href="intro 54 dz/index.html">Урок 54</a>
+                    </li>
+                    <li class="content__list-item">
+                        <a href="intro 55 dz/index.html">Урок 55</a>
+                    </li>
+                    <li class="content__list-item">
+                        <a href="intro 57 dz/index.html">Урок 57</a>
+                    </li>
+                    <li class="content__list-item">
+                        <a href="intro 58 dz/index.html">Урок 58</a>
+                    </li>
+                    <li class="content__list-item">
+                        <a href="intro 59 dz/index.html">Урок 59</a>
                     </li>
                     <li class="content__list-item">
                         <a href="intro-69-73 dz">Урок 69</a>
