--- a/index.html
+++ b/index.html
@@ -137,6 +137,9 @@
                     <li class="content__list-item">
                         <a href="intro-69-73 dz">Урок 69</a>
                     </li>
+                    <li class="content__list-item">
+                        <a href="intro 95- 126 dz final/wb">Урок 126</a>
+                    </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
