--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                         <a href="intro-69-73 dz">Урок 69</a>
                     </li>
                     <li class="content__list-item">
-                        <a href="intro 95- 126 dz final/wb">Урок 126</a>
+                        <a href="intro 95- 126 dz final/wake-bake">Урок 126</a>
                     </li>
                 </ul>
             </div>
